--- a/frontend/index.html
+++ b/frontend/index.html
@@ -86,7 +86,7 @@
                         <label for="regPassword">Password</label>
                         <div class="input-group">
                             <i class="fas fa-lock"></i>
-                            <input type="password" id="regPassword" name="password" required placeholder="Enter your password">
+                            <input type="password" id="regPassword" name="password" required minlength="6" maxlength="100" placeholder="Enter your password (min 6 characters)">
                             <button type="button" class="password-toggle" onclick="toggleRegisterPassword()">
                                 <i class="fas fa-eye"></i>
                             </button>
