--- a/frontend/index.html
+++ b/frontend/index.html
@@ -487,6 +487,21 @@
                     </li>
                 </ul>
             </nav>
+            
+            <!-- Become a Member Block -->
+            <div class="member-block">
+                <div class="member-card">
+                    <div class="member-icon">
+                        <i class="fas fa-user-plus"></i>
+                    </div>
+                    <h3>Become a Member</h3>
+                    <p>Join our healthcare community and get personalized care</p>
+                    <button class="btn btn-primary" onclick="showAddPatientForm()">
+                        <i class="fas fa-plus"></i>
+                        Add Patient
+                    </button>
+                </div>
+            </div>
         </aside>
 
         <!-- Patient Main Content -->
