--- a/frontend/index.html
+++ b/frontend/index.html
@@ -468,15 +468,9 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" onclick="showMyMedicalRecords()" class="nav-link">
-                            <i class="fas fa-file-medical"></i>
-                            <span>Medical Records</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" onclick="showMyPrescriptions()" class="nav-link">
-                            <i class="fas fa-prescription-bottle"></i>
-                            <span>Prescriptions</span>
+                        <a href="#" onclick="showViewDoctors()" class="nav-link">
+                            <i class="fas fa-user-md"></i>
+                            <span>View Doctors</span>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -524,24 +518,6 @@
                             <p>My Appointments</p>
                         </div>
                     </div>
-                    <div class="stat-card">
-                        <div class="stat-icon medical">
-                            <i class="fas fa-file-medical"></i>
-                        </div>
-                        <div class="stat-info">
-                            <h3 id="patientTotalRecords">0</h3>
-                            <p>Medical Records</p>
-                        </div>
-                    </div>
-                    <div class="stat-card">
-                        <div class="stat-icon prescriptions">
-                            <i class="fas fa-prescription-bottle"></i>
-                        </div>
-                        <div class="stat-info">
-                            <h3 id="patientTotalPrescriptions">0</h3>
-                            <p>Prescriptions</p>
-                        </div>
-                    </div>
                 </div>
 
                 <!-- Patient Quick Actions -->
@@ -555,10 +531,6 @@
                         <button class="action-btn" onclick="showMyAppointments()">
                             <i class="fas fa-calendar-check"></i>
                             View My Appointments
-                        </button>
-                        <button class="action-btn" onclick="showMyMedicalRecords()">
-                            <i class="fas fa-file-medical"></i>
-                            View Medical Records
                         </button>
                         <button class="action-btn" onclick="showPatientProfile()">
                             <i class="fas fa-user-edit"></i>
@@ -575,13 +547,6 @@
                     </div>
                 </div>
 
-                <!-- Recent Medical Records -->
-                <div class="recent-records">
-                    <h2>Recent Medical Records</h2>
-                    <div class="records-list" id="recentMedicalRecords">
-                        <!-- Recent records will be loaded here -->
-                    </div>
-                </div>
             </div>
 
             <!-- Patient Appointments View -->
@@ -611,24 +576,25 @@
                 </div>
             </div>
 
-            <!-- Patient Medical Records View -->
-            <div id="patientMedicalRecordsView" class="content-view">
+            <!-- Patient View Doctors View -->
+            <div id="patientViewDoctorsView" class="content-view">
                 <div class="page-header">
-                    <h1>My Medical Records</h1>
+                    <h1>Available Doctors</h1>
+                    <p>Browse our medical professionals</p>
                 </div>
                 <div class="table-container">
                     <table class="data-table">
                         <thead>
                             <tr>
                                 <th>ID</th>
-                                <th>Doctor</th>
-                                <th>Diagnosis</th>
-                                <th>Date</th>
-                                <th>Actions</th>
+                                <th>Name</th>
+                                <th>Email</th>
+                                <th>Contact</th>
+                                <th>Specialty</th>
                             </tr>
                         </thead>
-                        <tbody id="patientMedicalRecordsTableBody">
-                            <!-- Patient medical records will be loaded here -->
+                        <tbody id="patientViewDoctorsTableBody">
+                            <!-- Doctors will be loaded here -->
                         </tbody>
                     </table>
                 </div>
